test_cases/tests/axum/extract_self_ref.stderr
error: Handlers must only take owned values
  --> tests/axum/extract_self_ref.rs:23:22
   |
23 |     async fn handler(&self) {}
   |                      ^^^^^
